# material-reconstruction

./: CMakeLists.txt  LICENSE  README.md  api.html  dependencies.html  example.html  index.html  material-reconstruction-asdf.asd  material-reconstruction.asd  qlfile
.github/workflows/: build.yml  doc.yml
asdf/: lib-compilation.lisp  package.lisp
cmake/: FindFFTW3.cmake  FindProgramMap.cmake
docs/: manifest.lisp  manual.scr
src/: CMakeLists.txt  anneal-ocl.c  anneal-ocl.h  anneal.c  anneal.h  anneal_ocl.c  anneal_ocl.h  annealing.lisp  conditions.lisp  cooldown.lisp  corrfns.lisp  cost.lisp  ffi.lisp  gpu-context.lisp  gpu-object.lisp  gpu.cl  image.lisp  initialization.lisp  iterators.lisp  l2.lisp  low-level.c  low-level.h  main.c  metric.lisp  neighbors-histogram.lisp  package.lisp  proximeter.lisp  s2.lisp  samplers.lisp  slices.lisp
src/l2/: iterators.lisp  l2.lisp  package.lisp
static/: style.css
tests/: package.lisp  tests.lisp
